--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -6,3 +6,22 @@
 .form-error {
   color: #FF8A8A;
 }
+
+.loading-message {
+  display: block;
+  animation-name: blinking;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  align-self: center;
+  margin: 0.5rem auto;
+}
+
+@keyframes blinking {
+  from {
+    color: #000000;
+  }
+  to {
+    color: #ffffff;
+  }
+}
