--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,32 @@
 .lp-paragraph {
-  margin-bottom: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  font-size: x-large;
+  text-align: center;
+  margin-top: 0;
+}
+
+#lp-transfer, #lp-increase {
+  height: 200px;
+  width: auto;
+  margin: auto;
+}
+
+#lp-dropbox {
+  border-radius: 50%;
+  height: 150px;
+  width: auto;
+  margin: 20px 0 0 0;
+}
+
+#lp-onedrive {
+  height: 140px;
+  width: auto;
+  margin: 0 20px;
+}
+
+.lp-section {
+  padding: 25px;
+  background-color: aliceblue;
+  border-radius: 5px;
 }
