--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,5 +4,7 @@ main {
   align-self: center;
   height: 100%;
   margin: 1rem auto;
-  flex: 1
+  flex: 1;
+  background-color: aliceblue;
+  border-radius: 5px;
 }
