--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,20 +1,51 @@
 label {
   display: block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-bottom: 0.3rem;
+}
+
+form {
+  background-color: lightgray;
+  padding: 25px;
+  border-radius: 5px;
+  max-width: 100%;
 }
 
 form div {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+  max-width: 100%;
+}
+
+input {
+  max-width: 100%;
+}
+
+input[type=submit] {
+  align-self: flex-end;
+  background-color: lightseagreen;
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem 0.8rem;
+  margin-top: 0.5rem;
+  font-weight: lighter;
+  width: min-content;
+  width: max-content;
+}
+
+input[type=submit]:hover, input[type=submit]:focus {
+  background-color: rgb(20, 122, 117);
+  color: #ffffff;
+}
+
+.signin-header {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  font-size: x-large;
+  text-align: center;
+  margin-top: 0;
 }
 
 .validation-error {
   color: darkred;
   margin: 0.5rem auto 0 auto;
-}
-
-#create-acc-btn {
-  width: max-content;
-}
-
-.register-form-div {
-  width: min-content;
 }
