--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -1,3 +1,27 @@
 #upload-status {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  font-size: x-large;
   text-align: center;
+  margin-top: 0;
+}
+
+#back-btn {
+  background-color: lightgreen;
+  border: none;
+  border-radius: 5px;
+  padding: 0.3rem 0.8rem;
+  margin-top: 0.5rem;
+  font-weight: lighter;
+  width: max-content;
+}
+
+#back-btn:hover, #back-btn:focus {
+  background-color: darkgreen;
+  color: #ffffff;
+}
+
+#popup {
+  height: 100px;
+  margin: auto auto 1.5rem auto;
 }
