--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -8,7 +8,7 @@ form {
   background-color: lightgray;
   padding: 25px;
   border-radius: 5px;
-  max-width: 100%;
+  max-width: min-content;
 }
 
 form div {
