changed button hover style

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -32,8 +32,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover, input[type=submit]:focus {
-  background-color: darkgreen;
-  color: #ffffff;
+  text-decoration: underline;
 }
 
 .signin-header {
