--- a/src/components/Upload/Upload.css
+++ b/src/components/Upload/Upload.css
@@ -17,8 +17,7 @@
 }
 
 .upload-btn:hover, .upload-btn:focus {
-  background-color: darkgreen;
-  color: #ffffff;
+  text-decoration: underline;
 }
 
 .logo {
