free button text center aligned

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -38,6 +38,7 @@
   background-color: gold;
   color: #000000;
   text-decoration: none;
+  text-align: center;
 }
 
 #try-free:hover, #try-free:focus {
